--- a/views/ejs/header.ejs
+++ b/views/ejs/header.ejs
@@ -10,10 +10,10 @@
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.shapes.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.tablesheet.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.charts.17.0.2.min.js" type="text/javascript"></script>
-    <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/resources/ko/gc.spread.sheets.resources.ko.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/samples/FeatureDrillDown/scripts/FileSaver.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.print.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.pdf.17.0.2.min.js" type="text/javascript"></script>
+    <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.calcengine.languagepackages.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/interop/gc.spread.excelio.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.io.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.barcode.17.0.2.min.js" type="text/javascript"></script>
@@ -22,8 +22,10 @@
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.slicers.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.formulapanel.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/interop/gc.spread.excelio.17.0.2.min.js" type="text/javascript"></script>
-    <script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/samples/purejs/lib/scripts/gc.spread.sheets.designer.resource.ko.17.0.2.min.js" type="text/javascript"></script>
+    <script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.resource.ko.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.all.17.0.2.min.js" type="text/javascript"></script>
+    <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/resources/ko/gc.spread.sheets.resources.ko.17.0.2.min.js" type="text/javascript"></script>
+    
     
     <script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.min.js" type="text/javascript"></script>
     <script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.grid.min.js" type="text/javascript"></script>
