--- a/views/ejs/sample0.ejs
+++ b/views/ejs/sample0.ejs
@@ -12,6 +12,10 @@
     overflow: hidden;
 }
 
+.container {
+	display: block;
+}
+
 .spreadSheet {
     height: calc(100% - 100px);
 }
@@ -24,78 +28,9 @@
     margin: 10px;
     width: 40%;
 }
+.gc-edit-select .spinner-input {
+	height: auto;
+}
 </style>
-<script type="text/javascript">
-let spread = GC.Spread;
-let spreadNS = GC.Spread.Sheets;
-let config = GC.Spread.Sheets.Designer.DefaultConfig;
-let designer;
-window.onload = function () {
-  initRibbon();
-  initSpread(spread);
-};
 
-function initRibbon() {
-    // clear ribbon
-	config.ribbon = [];
-    // add new ribbon tab 
-	let newTab = {
-		id: 'operate',
-		text: 'Favorite',
-		buttonGroups: [],
-	};
-
-	config.ribbon.unshift(newTab);
-
-	// add new menu 
-	let basicMenu = {
-		label: 'Frequently used operations',
-		thumbnailClass: 'Frequently used operations',
-		commandGroup: {
-			children: [
-				{
-					commands: ['formulaAutoSum'],
-				},
-				{
-					commands: ['insertTable'],
-				},
-				{
-					type: 'separator',
-				},
-				{
-					direction: 'vertical',
-					children: [
-						{
-							commands: ['fontFamily', 'fontSize', 'fontWeight', 'backColor', 'foreColor'],
-						},
-						{
-							commands: ['find', 'replace', 'setFilter'],
-						},
-					],
-				},
-				{
-					direction: 'vertical',
-					commands: ['showHideVGridLine', 'showHideHGridLine'],
-				},
-			],
-		},
-	};
-
-	config.ribbon[0].buttonGroups.unshift(basicMenu);
-	designer = new spreadNS.Designer.Designer(document.getElementById('ribbonHost'), config);
-}
-
-function initSpread(spread) {
-  var spread = designer.getWorkbook();
-  var sheet = spread.getSheet(0);
-
-  fetch('json/Sample0.ssjson')
-    .then(response => {
-        return response.json();
-    })
-    .then(jsondata => {
-        spread.fromJSON(jsondata);
-        return;
-    })
-}
-</script>
+<script src="js/obfuscation/sample0.js" type="text/javascript"></script>
