--- a/views/ejs/header.ejs
+++ b/views/ejs/header.ejs
@@ -19,6 +19,7 @@
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.barcode.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.pdf.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.pivot.pivottables.17.0.2.min.js" type="text/javascript"></script>
+    <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.ganttsheet.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.slicers.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/plugins/gc.spread.sheets.formulapanel.17.0.2.min.js" type="text/javascript"></script>
     <script src="plugins/SpreadJS.Release.17.0.2/SpreadJS/scripts/interop/gc.spread.excelio.17.0.2.min.js" type="text/javascript"></script>
