--- a/views/ejs/left.ejs
+++ b/views/ejs/left.ejs
@@ -1,9 +1,9 @@
 <div class="left_nav_wrap">
     <ul class="left_nav">
         <li>
-            <a href="#" class="depth1" id="INRTO"><span>INRTO</span></a>
+            <a href="#" class="depth1" id="INTRO"><span>INTRO</span></a>
             <ul class="depth2_div">
-                <li><a href="/sample?depth1=INRTO&depth2=INTRO&sampleId=0" class="depth2 <%= depth1 == 'INRTO' && depth2 == 'INTRO' ? 'on' : '' %>"><span>INTRO</span></a></li>
+                <li><a href="/sample?depth1=INTRO&depth2=INTRO&sampleId=0" class="depth2 <%= depth1 == 'INTRO' && depth2 == 'INTRO' ? 'on' : '' %>"><span>INTRO</span></a></li>
             </ul>
         </li>
         <li>
