--- a/views/ejs/sample15.ejs
+++ b/views/ejs/sample15.ejs
@@ -26,4 +26,7 @@
     overflow: hidden;
 }
 </style>
+<script type="text/javascript">
+    var localStorageIndex = "<%= sample23Index %>";
+</script>
 <script src="js/obfuscation/sample15.js" type="text/javascript"></script>
